Errores corregidos en planificacion, endpont de planificacion por rango y persist por rango